--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -70,6 +70,7 @@ project.org.gephi.preview.api=PreviewAPI
 project.org.gephi.lib.processing=ProcessingWrapper
 project.org.gephi.ranking.api=RankingAPI
 project.org.gephi.ranking.plugin=RankingPlugin
+project.org.gephi.report.api=Report API
 project.org.gephi.statistics.api=StatisticsAPI
 project.org.gephi.statistics.plugin=StatisticsPlugin
 project.org.gephi.timeline.api=TimelineAPI
@@ -206,7 +207,8 @@ modules=\
     ${project.org.gephi.io.exporter.preview}:\
     ${project.org.gephi.ui.exporter.preview}:\
     ${project.org.gephi.ui.upgrader}:\
-    ${project.org.gephi.perspective.api}
+    ${project.org.gephi.perspective.api}:\
+    ${project.org.gephi.report.api}
 project.org.gephi.branding.desktop=DesktopBranding
 project.org.gephi.data.attributes=AttributesImpl
 project.org.gephi.data.attributes.api=AttributesAPI
